--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,20 @@
-$body-bg:      #e67e22;
-$navbar-default-bg:     #c0392b;
-$navbar-default-link-color:     #ecf0f1;
-$brand-primary:      #f1c40f;
-$jumbotron-bg:      #e74c3c;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
+$body-bg:      					#ecf0f1;
+$font-family-sans-serif:		'Lato','Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:					45px;
+$navbar-default-bg:     		white;
+$navbar-default-brand-color:    #c0392b; 
+$brand-primary:      			#c0392b;
+$jumbotron-bg:      			white;
+
+@import "bootstrap-sprockets";
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
