--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-	<h1>Welcome to my butt!</h1>
+	<h1>Welcome to my site!</h1>
 	<% if user_signed_in? %>
 	It's exclusive!
 	<% else %>
