--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,7 @@
 
       <div class="form-group">
         <%= f.label :name %>
-        <%= f.text_field :email, class: "form-control", :autofocus => true %>
+        <%= f.text_field :name, class: "form-control", :autofocus => true %>
       </div>
 
       <div class="form-group">
